// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAccountBuildMetrics > with groupBy day > with projectIds > returns the count of builds 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606867200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606953600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607040000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607126400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607212800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607385600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607472000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607558400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607644800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607731200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607817600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607990400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608076800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608163200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608249600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608336000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608422400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608595200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608681600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608768000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608854400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608940800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609027200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609200000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609286400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609372800000,
  },
  {
    "projects": {
      "1000000": 2,
    },
    "total": 2,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 1,
    },
    "total": 1,
    "ts": 1609545600000,
  },
  {
    "projects": {
      "1000000": 1,
    },
    "total": 1,
    "ts": 1609632000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609804800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609891200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609977600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610064000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610150400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610236800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610409600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610496000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610582400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610668800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610755200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610841600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611014400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611100800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611187200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611273600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611360000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611446400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611619200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611705600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611792000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611878400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611964800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612051200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountBuildMetrics > with groupBy day > with projectIds > returns the count of builds 2`] = `
{
  "projects": {
    "1000000": 4,
  },
  "total": 4,
}
`;

exports[`getAccountBuildMetrics > with groupBy day > without projectIds > returns the count of builds 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606867200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606953600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607040000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607126400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607212800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607385600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607472000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607558400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607644800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607731200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607817600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607990400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608076800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608163200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608249600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608336000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608422400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608595200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608681600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608768000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608854400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608940800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609027200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609200000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609286400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609372800000,
  },
  {
    "projects": {
      "1000000": 2,
    },
    "total": 2,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 1,
    },
    "total": 1,
    "ts": 1609545600000,
  },
  {
    "projects": {
      "1000000": 1,
    },
    "total": 1,
    "ts": 1609632000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609804800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609891200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609977600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610064000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610150400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610236800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610409600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610496000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610582400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610668800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610755200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610841600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611014400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611100800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611187200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611273600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611360000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611446400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611619200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611705600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611792000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611878400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611964800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612051200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountBuildMetrics > with groupBy day > without projectIds > returns the count of builds 2`] = `
{
  "projects": {
    "1000000": 4,
  },
  "total": 4,
}
`;

exports[`getAccountBuildMetrics > with groupBy month > with projectIds > returns the count of builds 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 4,
    },
    "total": 4,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountBuildMetrics > with groupBy month > with projectIds > returns the count of builds 2`] = `
{
  "projects": {
    "1000000": 4,
  },
  "total": 4,
}
`;

exports[`getAccountBuildMetrics > with groupBy month > without projectIds > returns the count of builds 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 4,
    },
    "total": 4,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountBuildMetrics > with groupBy month > without projectIds > returns the count of builds 2`] = `
{
  "projects": {
    "1000000": 4,
  },
  "total": 4,
}
`;

exports[`getAccountBuildMetrics > with groupBy week > with projectIds > returns the count of builds 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606694400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 4,
    },
    "total": 4,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountBuildMetrics > with groupBy week > with projectIds > returns the count of builds 2`] = `
{
  "projects": {
    "1000000": 4,
  },
  "total": 4,
}
`;

exports[`getAccountBuildMetrics > with groupBy week > without projectIds > returns the count of builds 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606694400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 4,
    },
    "total": 4,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountBuildMetrics > with groupBy week > without projectIds > returns the count of builds 2`] = `
{
  "projects": {
    "1000000": 4,
  },
  "total": 4,
}
`;

exports[`getAccountScreenshotMetrics > with groupBy day > with projectIds > returns the count of screenshots 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606867200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606953600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607040000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607126400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607212800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607385600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607472000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607558400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607644800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607731200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607817600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607990400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608076800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608163200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608249600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608336000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608422400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608595200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608681600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608768000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608854400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608940800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609027200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609200000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609286400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609372800000,
  },
  {
    "projects": {
      "1000000": 20,
    },
    "total": 20,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 4,
    },
    "total": 4,
    "ts": 1609545600000,
  },
  {
    "projects": {
      "1000000": 10,
    },
    "total": 10,
    "ts": 1609632000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609804800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609891200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609977600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610064000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610150400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610236800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610409600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610496000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610582400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610668800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610755200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610841600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611014400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611100800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611187200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611273600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611360000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611446400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611619200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611705600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611792000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611878400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611964800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612051200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountScreenshotMetrics > with groupBy day > with projectIds > returns the count of screenshots 2`] = `
{
  "projects": {
    "1000000": 34,
  },
  "total": 34,
}
`;

exports[`getAccountScreenshotMetrics > with groupBy day > without projectIds > returns the count of screenshots 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606867200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606953600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607040000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607126400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607212800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607385600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607472000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607558400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607644800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607731200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607817600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607990400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608076800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608163200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608249600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608336000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608422400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608595200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608681600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608768000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608854400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608940800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609027200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609200000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609286400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609372800000,
  },
  {
    "projects": {
      "1000000": 20,
    },
    "total": 20,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 4,
    },
    "total": 4,
    "ts": 1609545600000,
  },
  {
    "projects": {
      "1000000": 10,
    },
    "total": 10,
    "ts": 1609632000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609804800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609891200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609977600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610064000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610150400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610236800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610409600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610496000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610582400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610668800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610755200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610841600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611014400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611100800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611187200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611273600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611360000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611446400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611619200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611705600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611792000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611878400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611964800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612051200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountScreenshotMetrics > with groupBy day > without projectIds > returns the count of screenshots 2`] = `
{
  "projects": {
    "1000000": 34,
  },
  "total": 34,
}
`;

exports[`getAccountScreenshotMetrics > with groupBy month > with projectIds > returns the count of screenshots 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 34,
    },
    "total": 34,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountScreenshotMetrics > with groupBy month > with projectIds > returns the count of screenshots 2`] = `
{
  "projects": {
    "1000000": 34,
  },
  "total": 34,
}
`;

exports[`getAccountScreenshotMetrics > with groupBy month > without projectIds > returns the count of screenshots 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606780800000,
  },
  {
    "projects": {
      "1000000": 34,
    },
    "total": 34,
    "ts": 1609459200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountScreenshotMetrics > with groupBy month > without projectIds > returns the count of screenshots 2`] = `
{
  "projects": {
    "1000000": 34,
  },
  "total": 34,
}
`;

exports[`getAccountScreenshotMetrics > with groupBy week > with projectIds > returns the count of screenshots 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606694400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 34,
    },
    "total": 34,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountScreenshotMetrics > with groupBy week > with projectIds > returns the count of screenshots 2`] = `
{
  "projects": {
    "1000000": 34,
  },
  "total": 34,
}
`;

exports[`getAccountScreenshotMetrics > with groupBy week > without projectIds > returns the count of screenshots 1`] = `
[
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1606694400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607299200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1607904000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1608508800000,
  },
  {
    "projects": {
      "1000000": 34,
    },
    "total": 34,
    "ts": 1609113600000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1609718400000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610323200000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1610928000000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1611532800000,
  },
  {
    "projects": {
      "1000000": 0,
    },
    "total": 0,
    "ts": 1612137600000,
  },
]
`;

exports[`getAccountScreenshotMetrics > with groupBy week > without projectIds > returns the count of screenshots 2`] = `
{
  "projects": {
    "1000000": 34,
  },
  "total": 34,
}
`;
